customers/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-02-27T20:03:00Z"
  labels:
    app: customer
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-expose
    operation: Update
    time: "2021-02-27T20:03:00Z"
  name: customer
  namespace: booternetes
  resourceVersion: "8222699"
  selfLink: /api/v1/namespaces/booternetes/services/customer
  uid: 5b3e2e87-1471-4a14-993d-4a0585aaa58c
spec:
  clusterIP: 10.99.37.246
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: customer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
